--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,8 +30,11 @@
 
       body {
 
-        display: grid;
-        place-items: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2.3rem;
 
       }
 
@@ -100,6 +103,90 @@
       button:hover {
 
         background-color: rgb(83, 72, 158);
+
+      }
+
+      /*
+      
+        code related to the /all-users route
+      
+      */
+
+
+      .card {
+
+        min-height: 16%;
+        min-width: 26%;
+        border-radius: .7rem;
+        box-shadow: 0px 0px 5px rgb(167, 166, 166);
+        display: flex;
+        flex-direction: column;
+
+      }
+
+      .username {
+
+        width: 100%;
+        flex: .3;
+        border-top-left-radius: .7rem;
+        border-top-right-radius: .7rem;
+        border-bottom: 1px solid rgb(206, 205, 205);
+        display: flex;
+        align-items: center;
+        font-size: .7rem;
+        color: slateblue;
+        
+      }
+
+      .username h1 {
+
+        margin-left: 1.6rem;
+
+      }
+
+      .buttons {
+
+        width: 100%;
+        flex: 3;
+        border-bottom-left-radius: .7rem;
+        border-bottom-right-radius: .7em;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: flex-start;
+        align-items: flex-end;
+        gap: 1.5rem;
+
+      }
+
+      .buttons button {
+
+        padding: .7rem 1rem;
+        margin-bottom: .4rem;
+
+      }
+
+      .save-btn {
+
+        background-color: rgb(67, 113, 174);
+
+      }
+
+      .save-btn:hover {
+
+        background-color: rgb(33, 81, 144)
+
+      }
+
+      .delete-btn {
+
+        background-color: darkred;
+        margin-right: .8rem;
+
+      }
+
+      .delete-btn:hover {
+
+        background-color: rgb(120, 11, 11);
 
       }
 
