--- a/views/allUsers.handlebars
+++ b/views/allUsers.handlebars
@@ -1,28 +1,26 @@
-<header>
+<div class="card-container">
 
-  <h1>👨‍🚀 crudzin :D</h1>
-
-</header>
-
-{{#each allUsers}}
-
-  <div class="card">
-
-      <div class="username">
-        
-        <h1>{{this.dataValues.name}}</h1>
-        
-      </div>
-
-
-      <div class="buttons">
-
-        <button class="delete-btn">deletar</button>
-
-        <button class="save-btn">atualizar</button>
-        
-      </div>
-
-  </div>
-
-{{/each}}
+  {{#each allUsers}}
+  
+    <div class="card">
+  
+        <div class="username">
+  
+          <h1>{{this.dataValues.name}}</h1>
+  
+        </div>
+  
+  
+        <div class="buttons">
+  
+          <a href=""><button class="delete-btn">deletar</button></a>
+  
+          <a href="update-user/{{this.dataValues.id}}"><button class="save-btn">atualizar</button></a>
+  
+        </div>
+  
+    </div>
+  
+  {{/each}}
+  
+</div>
