--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
         font-family: 'PT sans', sans-serif;
         width: 100vw;
         height: 100vh;
-        overflow-x: hidden;
+        overflow: hidden;
 
       }
 
@@ -32,18 +32,26 @@
 
         display: flex;
         flex-direction: column;
+
+      }
+
+      main {
+
+        width: 100%;
+        height: 91%;
+        display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 2.3rem;
+        overflow-y: scroll;
 
       }
 
       header {
 
-        position: absolute;
-        top: 0;
         width: 100%;
-        height: 4rem;
+        height: 9%;
         display: flex;
         align-items: center;
         padding-left: 3.3rem;
@@ -112,6 +120,20 @@
       
       */
 
+    .card-container {
+
+      width: 80%;
+      height: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      gap: 3.5rem;
+      margin-top: 4rem;
+      margin-left: 7rem;
+
+    }
 
       .card {
 
@@ -208,9 +230,19 @@
   </head>
 
   <body>
+
+    <header>
+
+      <h1>👨‍🚀 crudzin :D</h1>
+
+    </header>
+
     
+  <main>
 
     {{{body}}}
+
+  </main>
 
   </body>
 
