--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -130,14 +130,14 @@
       align-items: flex-start;
       flex-wrap: wrap;
       gap: 3.5rem;
-      margin-top: 4rem;
+      margin-top: 6rem;
       margin-left: 7rem;
 
     }
 
       .card {
 
-        min-height: 16%;
+        min-height: 19%;
         min-width: 26%;
         border-radius: .7rem;
         box-shadow: 0px 0px 5px rgb(167, 166, 166);
@@ -209,6 +209,35 @@
       .delete-btn:hover {
 
         background-color: rgb(120, 11, 11);
+
+      }
+
+      .add-user {
+
+        position: absolute;
+        bottom: 2.5rem;
+        right: 2.5rem;
+        border-radius: 50%;
+        width: 3.4rem;
+        height: 3.4rem;
+        background-color: slateblue;
+        display: grid;
+        place-items: center;
+        font-size: 1.7rem;
+
+      }
+
+      .add-user:link,
+      .add-user:visited {
+
+        color: #000;
+        text-decoration: none
+
+      }
+
+      .add-user:hover {
+
+        background-color: rgb(83, 72, 158);
 
       }
 
