--- a/views/updateUser.handlebars
+++ b/views/updateUser.handlebars
@@ -5,7 +5,7 @@
     <div class="input-field">
 
       <label for="name">Seu novo nome</label>
-      <input type="text" name="name" id="name" autocomplete="off" />
+      <input type="text" name="name" id="name" autocomplete="off" required />
 
     </div>
 
@@ -13,7 +13,7 @@
     <div class="input-field">
 
       <label for="password">Sua nova palavra-passe</label>
-      <input type="password" name="password" id="password" autocomplete="off" />
+      <input type="password" name="password" id="password" autocomplete="off" required />
 
     </div>
 
